<?xml version="1.0"?>
<package format="2">
  <name>aikido_tutorials</name>
  <version>0.1.0</version>
  <description>Basic Aikido Tutorials</description>
  <license>BSD</license>

  <maintainer email="vsbhatt@usc.edu">Varun Bhatt</maintainer>

  <depend>dartsim</depend>
  <depend>eigen</depend>
  <depend>aikido</depend>

  <depend>ada_description</depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <!-- This is required by REP-136. -->
  <exec_depend>catkin</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>clang-format</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>